# portal-b2b-servico-vendas

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
mercado-service/: .env.example  Dockerfile  pyproject.toml
mercado-service/app/: config.py  main.py  routes.py
mercado-service/app/matching/: consumers.py  engine.py  snapshot.py
negociacao-service/: .env.example  Dockerfile  pyproject.toml
negociacao-service/app/: config.py  consumers.py  enums.py  main.py  metadata_cache.py  models.py  repository.py  routes.py  scheduler.py  schemas.py  service.py
shared/: pyproject.toml
shared/b2b_shared/: config.py
shared/b2b_shared/auth/: __init__.py  current_user.py  jwt.py
shared/b2b_shared/db/: __init__.py  engine.py
shared/b2b_shared/events/: __init__.py  envelope.py  topics.py
shared/b2b_shared/health/: __init__.py  router.py
shared/b2b_shared/kafka/: __init__.py  consumer.py  producer.py
